<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mgmcartofior.androiddeveloperfundamentals.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/first_textview_dim"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/orange_text" />

        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/first_textview_dim"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/green_text" />

        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/first_textview_dim"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/blue_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_2ndLinear">

        <Button
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/button" />

        <ImageButton
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@mipmap/ic_launcher_poza" />

        <Button
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/green_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_edittext"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:layout_marginTop="@dimen/topmargin_edittext"
            android:layout_weight="1"
            android:hint="@string/first_edittext"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0"
            android:layout_marginBottom="@dimen/bottommargin_edittext"
            android:layout_weight="1"
            android:hint="@string/second_edittext"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/powderblue">

        <CheckBox
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/checkbox_text"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textview_text" />

        <Switch
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_dimension"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/powderblue">

        <RatingBar
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4"
            android:stepSize="0.5" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_dimension"
        android:background="@color/grey"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powderblue">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimension_16">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_yestext"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_notext"/>
    </RadioGroup>
</LinearLayout>

</LinearLayout>