<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_mainAct"
    android:orientation="vertical"
    tools:context="com.example.mgmcartofior.androiddeveloperfundamentals.week3.PracticeWeek3Activity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/dimension_16"
    android:textColor="@color/orange"
    android:text="@string/login"/>
    <EditText
        android:id="@+id/edittext_email"
        android:layout_marginTop="@dimen/margintop_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edittext_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Phone"/>
        <Spinner
            android:id="@+id/spinner_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimension_16">

        </Spinner>
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox_tandc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_m_accepting_t_c"/>
    <Button
        android:onClick="submitbtnOnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
    <TextView
        android:id="@+id/textView_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>